Fully implemented the timer interface. Update the embedded VS project.

--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
@@ -310,115 +310,118 @@
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="..\..\..\Chimera\algorithm" />
-    <None Include="..\..\..\Chimera\buffer" />
-    <None Include="..\..\..\Chimera\build.jam" />
-    <None Include="..\..\..\Chimera\callback" />
-    <None Include="..\..\..\Chimera\clock" />
-    <None Include="..\..\..\Chimera\common" />
-    <None Include="..\..\..\Chimera\container" />
-    <None Include="..\..\..\Chimera\crc" />
-    <None Include="..\..\..\Chimera\dma" />
-    <None Include="..\..\..\Chimera\ethernet" />
-    <None Include="..\..\..\Chimera\event" />
-    <None Include="..\..\..\Chimera\gpio" />
-    <None Include="..\..\..\Chimera\power" />
-    <None Include="..\..\..\Chimera\serial" />
-    <None Include="..\..\..\Chimera\spi" />
-    <None Include="..\..\..\Chimera\system" />
-    <None Include="..\..\..\Chimera\thread" />
-    <None Include="..\..\..\Chimera\timer" />
-    <None Include="..\..\..\Chimera\uart" />
-    <None Include="..\..\..\Chimera\usart" />
-    <None Include="..\..\..\Chimera\utility" />
-    <None Include="..\..\..\Chimera\watchdog" />
     <None Include="stm32.props" />
     <None Include="ChimeraStaticLibrary-Debug.vgdbsettings" />
     <None Include="ChimeraStaticLibrary-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_base.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart_intf.hpp" />
+    <None Include="..\..\..\Chimera\build.jam" />
     <ClInclude Include="..\..\..\Chimera\version.hpp" />
-    <ClCompile Include="..\..\..\Chimera\sim\sim_chimera.cpp" />
+    <None Include="..\..\..\Chimera\sim\build.jam" />
+    <ClCompile Include="..\..\..\Chimera\sim\sim_chimera_timer.cpp" />
     <ClCompile Include="..\..\..\Chimera\sim\sim_chimera_system.cpp" />
-    <ClInclude Include="..\..\..\Chimera\sim\sim_chimera.hpp" />
+    <ClInclude Include="..\..\..\Chimera\sim\sim_chimera_timer.hpp" />
     <ClInclude Include="..\..\..\Chimera\sim\sim_chimera_system.hpp" />
     <ClInclude Include="..\..\..\Chimera\sim\config\chimera\chimeraConfig.hpp" />
-    <ClInclude Include="..\..\..\Chimera\sim\config\chimera\chimeraPort.hpp" />
     <ClInclude Include="..\..\..\Chimera\sim\config\freertos\FreeRTOSConfig.h" />
+    <None Include="..\..\..\Chimera\src\algorithm\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\algorithm\register_optimizer.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\algorithm\register_optimizer.hpp" />
+    <None Include="..\..\..\Chimera\src\allocator\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\allocator\chimera_allocator.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\allocator\allocator.hpp" />
+    <None Include="..\..\..\Chimera\src\buffer\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\buffer\chimera_buffer.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\buffer\buffer.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\buffer\buffer_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\buffer\buffer_intf.hpp" />
+    <None Include="..\..\..\Chimera\src\callback\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\callback\callback_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\callback\callback_types.hpp" />
+    <ClCompile Include="..\..\..\Chimera\src\common\boost_stubs.cpp" />
+    <None Include="..\..\..\Chimera\src\common\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\common\chimera.cpp" />
+    <ClCompile Include="..\..\..\Chimera\src\common\compiler_intf.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\common\chimera.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\common\common_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\common\compiler_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\common\preprocessor.hpp" />
+    <None Include="..\..\..\Chimera\src\container\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\container\chimera_container.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\container\container.hpp" />
+    <None Include="..\..\..\Chimera\src\event\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\event\event.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\event\event_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\event\event_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\event\event_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\peripheral_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\clock\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_types_fwd.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\crc\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\crc\chimera_crc.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\dma\build.jam" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\dma\chimera_dma.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\ethernet\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\ethernet\ethernet_intf.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\gpio\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\gpio\chimera_gpio.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\power\build.jam" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\power\chimera_power.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_types.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_types_fwd.hpp" />
-    <ClCompile Include="..\..\..\Chimera\src\peripherals\power\chimera_power.cpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\spi\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\spi\chimera_spi.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_ext.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\timer\build.jam" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\timer\chimera_timer.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\pwm_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\pwm_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\uart\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\uart\chimera_uart.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\usart\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\usart\chimera_usart.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart_intf.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart_types.hpp" />
+    <None Include="..\..\..\Chimera\src\peripherals\watchdog\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\watchdog\chimera_watchdog.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\watchdog\watchdog.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\watchdog\watchdog_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\watchdog\watchdog_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\watchdog\watchdog_types.hpp" />
+    <None Include="..\..\..\Chimera\src\serial\build.jam" />
+    <ClCompile Include="..\..\..\Chimera\src\serial\chimera_serial.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\serial\serial.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\serial\serial_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\serial\serial_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\serial\serial_types.hpp" />
-    <ClCompile Include="..\..\..\Chimera\src\serial\chimera_serial.cpp" />
+    <None Include="..\..\..\Chimera\src\system\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\system\chimera_system.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\system\system.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\system\system_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\system\system_types.hpp" />
+    <None Include="..\..\..\Chimera\src\threading\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\threading\extensions.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\threading\internal_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\threading\mutex.hpp" />
@@ -434,6 +437,7 @@
     <ClInclude Include="..\..\..\Chimera\src\threading\freertos\freertos_sync_primitives.hpp" />
     <ClCompile Include="..\..\..\Chimera\src\threading\stl\stl_threading_implementation.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\threading\stl\stl_sync_primitives.hpp" />
+    <None Include="..\..\..\Chimera\src\utilities\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\utilities\utilities.hpp" />
     <ClInclude Include="..\..\..\Chimera\standalone\config\chimera\chimeraConfig.hpp" />
     <ClInclude Include="..\..\..\Chimera\standalone\config\chimera\chimeraPort.hpp" />
