--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj.filters
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj.filters
@@ -106,6 +106,9 @@
     <Filter Include="Chimera\standalone\config\chimera">
       <UniqueIdentifier>{3fcd265c-76a7-426d-a371-da9e4f2ee944}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Device-specific files">
+      <UniqueIdentifier>{bb4cbadd-27ec-4c14-80d2-d303d0218b55}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="ChimeraStaticLibrary-Debug.vgdbsettings">
@@ -551,6 +554,18 @@
     </None>
     <None Include="..\..\..\Chimera\watchdog">
       <Filter>Chimera</Filter>
+    </None>
+    <None Include="ChimeraStaticLibrary-STM32F432KC-Release.vgdbsettings">
+      <Filter>VisualGDB settings</Filter>
+    </None>
+    <None Include="ChimeraStaticLibrary-STM32F446RE-Debug.vgdbsettings">
+      <Filter>VisualGDB settings</Filter>
+    </None>
+    <None Include="ChimeraStaticLibrary-STM32F446RE-Release.vgdbsettings">
+      <Filter>VisualGDB settings</Filter>
+    </None>
+    <None Include="ChimeraStaticLibrary-STM32L432KC-Debug.vgdbsettings">
+      <Filter>VisualGDB settings</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
