--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
@@ -467,6 +467,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\Chimera\build.jam" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\version.hpp" />
     <None Include="..\..\..\Chimera\sim\build.jam" />
     <ClCompile Include="..\..\..\Chimera\sim\sim_chimera_timer.cpp" />
@@ -509,9 +511,9 @@
     <ClInclude Include="..\..\..\Chimera\src\peripherals\peripheral_types.hpp" />
     <None Include="..\..\..\Chimera\src\peripherals\clock\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_types_fwd.hpp" />
     <None Include="..\..\..\Chimera\src\peripherals\crc\build.jam" />
     <ClCompile Include="..\..\..\Chimera\src\event\chimera_event.cpp" />
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\clock\chimera_clock.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\crc\chimera_crc.cpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\crc\crc_intf.hpp" />
