--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj.filters
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj.filters
@@ -246,9 +246,6 @@
     <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_intf.hpp">
       <Filter>Chimera\src\peripherals\clock</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_types_fwd.hpp">
-      <Filter>Chimera\src\peripherals\clock</Filter>
-    </ClInclude>
     <None Include="..\..\..\Chimera\src\peripherals\crc\build.jam">
       <Filter>Chimera\src\peripherals\crc</Filter>
     </None>
@@ -572,6 +569,12 @@
     <ClInclude Include="..\..\..\Chimera\sim\sim_chimera_timer.hpp">
       <Filter>Chimera\sim</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock.hpp">
+      <Filter>Chimera\src\peripherals\clock</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_types.hpp">
+      <Filter>Chimera\src\peripherals\clock</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Chimera\sim\sim_chimera_timer.cpp">
@@ -579,6 +582,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\Chimera\src\event\chimera_event.cpp">
       <Filter>Chimera\src\event</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Chimera\src\peripherals\clock\chimera_clock.cpp">
+      <Filter>Chimera\src\peripherals\clock</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
